


X.XX - YYYY/MM/DD
- Installer now supports the /AllUsers argument to install for all users instead of current user (Grahame Bevan).
- Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS).
- Add original and optimized sizes in log file (JoeW).
- Fixed a bug in mutool that prevented execution on PDF (LeTiger).
- Updated to ECT 0.6.2.0 -511fa96- x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated jsmin custom build with Visual C++ 2015.
- Updated Leanify to 0.4.3.159 daily binaries.
- Updated ImageMagick 7.0.3.4 with HDRI support.
- Updated PngOptimizer to 2.5.
- Updated Ghostscript to 9.20.
- Updated strip to 2.27.
- Updated to cppcheck 1.76.
- Upgraded distributions to 7-Zip 16.04.
- Some minor optimizations and code cleanup.


9.20 - 2016/10/01
- Added INI setting to add extra extensions to be threated as JSON (Oddbrother).
- Implemented several UPX compression profiles depending on optimization level (User Hunter).
- Updated ImageMagick 7.0.3.1 with HDRI support.
- Updated Leanify to 0.4.3.152 daily binaries.
- Upgraded distributions to 7-Zip 16.03.
- Some minor optimizations and code cleanup.

9.10 - 2016/09/17
- Added mutools (clean -ggg) to the PDF tools chain (TPS).
- Added F5 key to refresh grid contents updating original size (originfake).
- Added CTRL-F5 key to reload grid contents. It will remove already optimized items, and then do a refresh (originfake).
- Added support for Adobe Illustrator (AI) file types (maadjordan).
- Dynamically adapt instruction text, stating if files will be backuped on Recycle Bin or not, according to settings (Armin Mueller).
- Implemented heuristic detection of corrupted PDF after Ghostcript processing the encryption (Gonzalo).
- Proper wording wording for "Mb." is "MiB". Thanks to Armin Mueller for the patch (Armin Mueller).
- Fixed calling to ImageMagick that was passing incorrect switches and prevented TIFF and ICO optimization (Michael Goeller).